@@ -2,5 +2,4 @@
 <div>text</div>
 <p><br /></p>
 <a name="Section_1.1"></a><h3><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading5&amp;section=2">Edit</a>]</span><span>Section 1.1</span></h3>
-
 <a name="Section_1.1.1"></a><h4><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading5&amp;section=3">Edit</a>]</span><span>Section 1.1.1</span></h4>
